<resources>
    <string name="app_name">Esca</string>

    <string name="language_choice">CHOOSE YOUR LANGUAGE</string>
    <string name="scan">START SCANNING!</string>
    <string name="edit_profile">EDIT PROFILE</string>

    <string name="questionable_ingredients">%1$s contains the following ingredients that
        don\'t match your dietary preferences- </string>
    <string name="view_all">View All Ingredients</string>
    <string name="scan_another">Scan Another</string>

    <string name="all_ingredients">This product contains- </string>
    <string name="back">Back</string>

    <string name="done">Done!</string>

    <string name="name">Name: </string>
    <string name="age">Age: </string>

    <string name="allergies">Check any allergies that you have: </string>
    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="fish">Fish</string>
    <string name="crustacean">Crustacean</string>
    <string name="tree_nut">Tree nuts</string>
    <string name="peanuts">Peanuts</string>
    <string name="wheat">Wheat</string>
    <string name="soybeans">Soybeans</string>
    <string name="rice">Rice</string>
    <string name="garlic">Garlic</string>
    <string name="oats">Oats</string>
    <string name="sulfites">Sulfites</string>
    <string name="gluten">Gluten</string>

    <string name="diet_preference">Select your diet preference: </string>

    <string name="medical_conditions">Check any chronic medical conditions you have: </string>
    <string name="diabetes">Diabetes</string>
    <string name="kidney_diseases">Kidney diseases</string>
    <string name="high_cholesterol">High cholesterol</string>
    <string name="gout">Gout</string>
    <string name="celiac_disease">Celiac disease</string>
    <string name="lactose_intolerance">Lactose intolerance</string>
    <string name="osteoporosis">Osteoporosis</string>

    <string name="cont">Continue</string>
    <string name="profile_photo">Profile Photo</string>

    <string name="ok">OK</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>

    <string name="text_edit_profile_image">Edit Image</string>
</resources>