<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.sethi.mehr.finalapp.Controller.Fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#0B0C10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/profile_photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_profile"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/text_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonHeight"
                    android:text="@string/edit_profile"
                    android:textSize="22sp"
                    android:background="#45A29E"
                    android:textColor="#C5C6C7"
                    android:gravity="center"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:background="#00000000"/>

        </RelativeLayout>

        <Button
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1.2"
            android:text="@string/scan"
            android:textSize="40sp"
            android:background="#45A29E"
            android:textColor="#C5C6C7"/>
    </LinearLayout>

</FrameLayout>
