<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="itp341.sethi.mehr.finalapp.Controller.Fragments.ResultsFragment"
    android:background="#45A29E">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="#1F2833"
            android:background="#C5C6C7">
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_results">

            <ImageView
                android:id="@+id/image_suitability"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:scaleType="centerCrop"
                android:src="@drawable/gradient" />

            <ImageView
                android:id="@+id/image_suitability_overlay"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignBaseline="@+id/image_suitability"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:alpha="0.4"
                android:background="#000000"/>

            <ImageView
                android:id="@+id/image_margin_bar"
                android:layout_width="5dp"
                android:layout_height="128dp"
                android:layout_alignBaseline="@+id/image_suitability"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="12dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/text_questionable_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/image_suitability"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big"
                android:gravity="start"
                android:text="@string/questionable_ingredients"
                android:textColor="#1F2833"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/list_questionable_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_view_all"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_questionable_ingredients"
                android:layout_marginBottom="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big"
                android:background="#C5C6C7"
                android:textColor="#1F2833" />

            <Button
                android:id="@+id/button_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_scan_another"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="65dp"
                android:layout_marginStart="65dp"
                android:background="#1F2833"
                android:text="@string/view_all"
                android:textColor="#45A29E"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_scan_another"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/margin_big"
                android:layout_marginEnd="65dp"
                android:layout_marginStart="65dp"
                android:background="#1F2833"
                android:text="@string/scan_another"
                android:textColor="#45A29E"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>
